# blocks

./: .gitignore  AGENTS.md  BLOCKS_LANGUAGE_WHITEPAPER.md  BLOCKS_SPEC.md  Cargo.toml  DEVELOPMENT_WHITEPAPER.md  README.md  WHITEPAPER.md
.claude/: settings.json
.github/workflows/: repo-check.yml
apps/echo-pipeline/: README.md  app.yaml
apps/echo-pipeline/backend/: Cargo.toml
apps/echo-pipeline/frontend/: README.md
apps/hello-pipeline/: README.md  app.yaml  input.example.json
apps/hello-pipeline/backend/: Cargo.toml
apps/hello-pipeline/backend/src/: main.rs
apps/hello-pipeline/frontend/: README.md
blocks/core.console.write_line/: README.md  block.yaml
blocks/core.console.write_line/rust/: Cargo.toml  lib.rs
blocks/core.fs.read_text/: README.md  block.yaml
blocks/core.fs.read_text/rust/: Cargo.toml  lib.rs
blocks/core.fs.write_text/: README.md  block.yaml
blocks/core.fs.write_text/rust/: Cargo.toml  lib.rs
blocks/core.http.get/: README.md  block.yaml
blocks/core.http.get/rust/: Cargo.toml  lib.rs
blocks/core.json.transform/: README.md  block.yaml
blocks/core.json.transform/rust/: Cargo.toml  lib.rs
blocks/core.llm.chat/: README.md  block.yaml
blocks/core.llm.chat/rust/: Cargo.toml  lib.rs
blocks/demo.echo/: README.md  block.yaml
blocks/demo.echo/evaluators/: run.sh
blocks/demo.echo/examples/: run.sh  success.input.json
blocks/demo.echo/fixtures/: success.input.json
blocks/demo.echo/rust/: Cargo.toml  lib.rs
blocks/demo.echo/tests/: run.sh
blocks/demo.slugify/: README.md  block.yaml
blocks/demo.slugify/rust/: Cargo.toml  lib.rs
blocks/ui.counter.mount/: README.md  block.yaml
blocks/ui.dom.mount_text/: README.md  block.yaml
crates/blocks-bcl/: Cargo.toml
crates/blocks-bcl/src/: diagnostics.rs  lib.rs
crates/blocks-bcl/src/emit/: mod.rs
crates/blocks-bcl/src/ir/: mod.rs  model.rs  plan_view.rs
crates/blocks-bcl/src/sema/: mod.rs
crates/blocks-bcl/src/syntax/: ast.rs  parser.rs
crates/blocks-bcl/tests/: plan_emit.rs  validate.rs
crates/blocks-cli/: Cargo.toml
crates/blocks-cli/src/: lib.rs  main.rs
crates/blocks-cli/src/app/: mod.rs  toolchain.rs
crates/blocks-cli/src/commands/: bcl.rs  block.rs  catalog.rs  compat.rs  conformance.rs  moc.rs  moc_bcl.rs  mod.rs  pkg.rs  runtime.rs  upgrade.rs
crates/blocks-cli/src/render/: mod.rs
crates/blocks-cli/tests/: cli_behavior.rs  pkg_phase2_red.rs
crates/blocks-cli/tests/common/: mod.rs
crates/blocks-composer/: Cargo.toml
crates/blocks-composer/src/: lib.rs
crates/blocks-composer/tests/: composer_execute.rs
crates/blocks-contract/: Cargo.toml
crates/blocks-contract/src/: lib.rs
crates/blocks-contract/tests/: contract_validation.rs
crates/blocks-core/: Cargo.toml
crates/blocks-core/src/: lib.rs
crates/blocks-moc/: Cargo.toml
crates/blocks-moc/src/: lib.rs
crates/blocks-moc/tests/: moc_execute.rs
crates/blocks-package/: Cargo.toml
crates/blocks-package/src/: lib.rs
crates/blocks-registry/: Cargo.toml
crates/blocks-registry/src/: lib.rs
crates/blocks-registry/tests/: registry_scan.rs
crates/blocks-runner-catalog/: Cargo.toml  build.rs
crates/blocks-runner-catalog/src/: codegen.rs  lib.rs
crates/blocks-runtime/: Cargo.toml
crates/blocks-runtime/src/: lib.rs
docs/: TODO.md
docs/archive/: README.md
docs/decisions/: 001-enforce-contract-runtime-boundary.md  002-r10-phase1-runtime-observability-boundary.md  003-bcl-assists-moc-not-runtime.md  004-phase2-package-registry-boundary.md  README.md
docs/design/: MVP_PLAN.md
docs/guide/: README.md  bcl_authoring_baseline.md  bcl_mvp_workflow.md  block_authoring_baseline.md  blocks_bcl_toolchain_handbook.md  build_moc_baseline.md  conformance_workflow.md  discovery_diagnostics_migration_workflow.md  package_registry_baseline_workflow.md
docs/logs/: 2026-03-04-blocks-cli-decoupling-phase-1.md  2026-03-04-blocks-cli-decoupling-phase-2.md  2026-03-04-blocks-cli-decoupling-phase-3.md  2026-03-04-greeting-proof-slice.md  2026-03-05-blocks-cli-r10-phase-3.md  2026-03-16-phase2-package-registry-red-tests-round-2.md  2026-03-16-phase2-package-registry-red-tests-round-3.md  2026-03-16-phase2-package-registry-red-tests-round-4.md  2026-03-16-phase2-package-registry-red-tests.md  README.md
docs/prds/: ARCHITECTURE_DEBT_REDUCTION_PLAN_2026Q1.md  BCL_MOC_ASSIST_PLAN.md  BLOCKS_BCL_TOOLCHAIN_PLAN.md  BLOCKS_CLI_DECOUPLING_PLAN.md  BLOCKS_PHASE2_PACKAGE_REGISTRY_PLAN.md  BLOCK_DEBUG_OBSERVABILITY_FOUNDATION_PLAN.md  GREETING_PROOF_SLICE_PLAN.md  MVP_PLAN.md  R10_PHASE1_MINIMAL_RUNTIME_BOUNDARY_PLAN.md  README.md  RUST_WORKSPACE_ARCHITECTURE.md
docs/specs/: ARCHITECTURE_REFACTOR_SPEC_2026Q1.md  BCL_MOC_MVP_SPEC.md  BLOCKS_BCL_TOOLCHAIN_SPEC.md  BLOCKS_PACKAGE_MODEL_SPEC.md  BLOCKS_REGISTRY_BASELINE_SPEC.md  BLOCKS_SPEC.md  BLOCK_DEBUG_OBSERVABILITY_FOUNDATION_SPEC.md  GREETING_PROOF_SLICE_SPEC.md  MOC_SPEC.md  R10_PHASE1_RUNTIME_BOUNDARY_SPEC.md
docs/whitepapers/: BLOCKS_LANGUAGE_WHITEPAPER.md  DEVELOPMENT_WHITEPAPER.md  WHITEPAPER.md
mocs/counter-panel-web/: README.md  moc.yaml
mocs/echo-pipeline/: README.md  input.example.json  moc.bcl  moc.yaml
mocs/greeting-api-service/: README.md  moc.yaml
mocs/greeting-panel-web/: README.md  moc.bcl  moc.yaml
mocs/hello-message-lib/: Cargo.toml  README.md  moc.yaml
mocs/hello-panel-lib/: README.md  moc.yaml
mocs/hello-panel-web/: README.md  moc.yaml
mocs/hello-pipeline/: README.md  moc.yaml
mocs/hello-pipeline/backend/: Cargo.toml
mocs/hello-pipeline/backend/src/: main.rs
mocs/hello-service/: README.md  moc.bcl  moc.yaml
mocs/hello-world-console/: README.md  moc.yaml
mocs/hello-world-console/backend/: Cargo.toml
mocs/hello-world-console/backend/src/: main.rs
scripts/: repo_check.sh
skills/: build-moc.md  compose-app.md  create-block.md
(+42 files in other folders)
