[workspace]
members = [
  "crates/blocks-bcl",
  "crates/blocks-contract",
  "crates/blocks-registry",
  "crates/blocks-runtime",
  "crates/blocks-runner-catalog",
  "crates/blocks-cli",
  "crates/blocks-moc",
  "blocks/demo.echo/rust",
  "blocks/core.console.write_line/rust",
  "blocks/core.fs.read_text/rust",
  "blocks/core.fs.write_text/rust",
  "blocks/core.http.get/rust",
  "blocks/core.json.transform/rust",
  "blocks/core.llm.chat/rust",
  "mocs/hello-message-lib",
  "mocs/greeting-api-service/backend",
  "mocs/hello-pipeline/backend",
  "mocs/echo-pipeline/backend",
  "mocs/hello-world-console/backend",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.14"
thiserror = "2.0"
