[package]
name = "blocks-bcl"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
blocks-contract = { path = "../blocks-contract" }
blocks-moc = { path = "../blocks-moc" }
blocks-registry = { path = "../blocks-registry" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
