[package]
name = "blocks-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "blocks"
path = "src/main.rs"

[dependencies]
blocks-composer = { path = "../blocks-composer" }
blocks-core = { path = "../blocks-core" }
blocks-registry = { path = "../blocks-registry" }
blocks-runtime = { path = "../blocks-runtime" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
