[package]
name = "blocks-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "blocks"
path = "src/main.rs"

[dependencies]
blocks-moc = { path = "../blocks-moc" }
blocks-registry = { path = "../blocks-registry" }
blocks-runner-catalog = { path = "../blocks-runner-catalog" }
blocks-runtime = { path = "../blocks-runtime" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
