[package]
name = "blocks-runner-catalog"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
blocks-runtime = { path = "../blocks-runtime" }
block-demo-echo = { path = "../../blocks/demo.echo/rust" }
block-core-console-write-line = { path = "../../blocks/core.console.write_line/rust" }
block-core-fs-read-text = { path = "../../blocks/core.fs.read_text/rust" }
block-core-fs-write-text = { path = "../../blocks/core.fs.write_text/rust" }
block-core-http-get = { path = "../../blocks/core.http.get/rust" }
block-core-json-transform = { path = "../../blocks/core.json.transform/rust" }
block-core-llm-chat = { path = "../../blocks/core.llm.chat/rust" }
serde_json.workspace = true

[build-dependencies]
blocks-contract = { path = "../blocks-contract" }

[dev-dependencies]
blocks-contract = { path = "../blocks-contract" }
tempfile.workspace = true
