[package]
name = "hello-pipeline-backend"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "hello-pipeline-backend"
path = "src/main.rs"

[dependencies]
blocks-composer = { path = "../../../crates/blocks-composer" }
blocks-core = { path = "../../../crates/blocks-core" }
blocks-registry = { path = "../../../crates/blocks-registry" }
blocks-runtime = { path = "../../../crates/blocks-runtime" }
serde_json.workspace = true
